# fd-dictionaries

./: .gitignore  Makefile  README.md  freedict-database.rng  freedict-database.xml
CVSROOT/: loginfo
afr-deu/: AUTHORS  ChangeLog  Makefile  README  afr-deu.tei  afr-deu.tei.header
afr-eng/: ChangeLog  Makefile  README  afr-eng.tei  afr-eng.tei.header
ara-eng/: AUTHORS  ChangeLog  Makefile
bel-fra/: AUTHORS  ChangeLog  Makefile  README  bel-fra.tei  freedict-P5.rng  freedict-dictionary.xsl
bre-fra/: ChangeLog  Makefile  freedict-P5.rng  freedict-dictionary.css  freedict.dtd  geriadur.dtd  tei.css  tei.xsl  teientry2txt.xsl
ces-eng/: ChangeLog  Makefile  README  ces-eng.tei
ckb-kmr/: Makefile  README  ckb-kmr.tei  ckb-kmr.tei.header  sor-kur.txt
cro-eng/: ChangeLog  Makefile  NEWS
cym-eng/: AUTHORS  ChangeLog  Makefile  cym-eng.tei
cze-eng/: Makefile  Makefile.language  cze-eng.tei  cze-eng.tei.header
dan-eng/: ChangeLog  Makefile  Makefile.language  dan-eng.tei  dan-eng.tei.header
deu-eng/: AUTHORS  ChangeLog  Makefile
deu-fra/: COPYING  ChangeLog  Makefile  deu-fra.tei  deu-fra.tei.header
deu-ita/: ChangeLog  Makefile  deu-ita.tei  deu-ita.tei.header
deu-kur/: Deutsch-Kurdi.txt  Deutsch-Kurdî.txt  Makefile  deu-kur.tei  deu-kur.tei.header
deu-nld/: Makefile  deu-nld.tei  deu-nld.tei.header
deu-por/: ChangeLog  Makefile  deu-por-nophon.tei  deu-por.tei
deu-swe/: AUTHORS  COPYING  ChangeLog  Makefile
deu-tur/: INSTALL  Makefile  deu-tur.tei.header  german-turkish.txt
eng-afr/: ChangeLog  Makefile  eng-afr.tei  eng-afr.tei.header
eng-ara/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.language  README
eng-ces/: ChangeLog  Makefile  eng-ces.tei.header
eng-cro/: Makefile  README
eng-cym/: COPYING  ChangeLog  Makefile  eng-cym.tei
eng-cze/: ChangeLog  Makefile  eng-cze.tei.header  general.footer
eng-dan/: Makefile  eng-dan.tei
eng-deu/: ChangeLog  Makefile
eng-ell/: AUTHORS  ChangeLog  Makefile  README  freedict-P5.rng
eng-fra/: ChangeLog  Makefile  eng-fra.tei  eng-fra.tei.header
eng-gle/: ChangeLog  Makefile  README  eng-gle.tei
eng-hin/: AUTHORS  ChangeLog  English-Hindi-Dictionary_2.isc  English-Hindi-Dictionary_2.isc.diff  Makefile  Makefile.language  README  ehconv.yy  eng-hin.tei.header
eng-hrv/: COPYING  ChangeLog  Makefile  README
eng-hun/: .gitignore  ChangeLog  Makefile  Makefile.language  eng-hun.tei.header  freedict-P5.dtd
eng-iri/: ChangeLog  Makefile  eng-iri.tei
eng-ita/: Makefile  Makefile.language  eng-ita.tei  eng-ita.tei.header
eng-lat/: Makefile  eng-lat.tei  eng-lat.tei.header
eng-lit/: ChangeLog  Makefile  eng-lit.tei
eng-nld/: ChangeLog  INSTALL  Makefile  README  eng-nld.tei  eng-nld.tei.header
eng-pol/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  README  eng-pol.css  eng-pol.tei
eng-por/: ChangeLog  Makefile  eng-por.tei
eng-rom/: AUTHORS  ChangeLog  Makefile  README  eng-rom.tei  eng-rom.tei.header  eng-rom.text  romtext2tei.pl
eng-rus/: ChangeLog  Makefile  eng-rus.tei  eng-rus.tei.header
eng-scr/: ChangeLog  Makefile  README  eng-scr.tei
eng-spa/: ChangeLog  Makefile  eng-spa.tei  eng-spa.tei.header
eng-srp/: Makefile  README  eng-srp.tei
eng-swa/: ChangeLog  Makefile  README  eng-swa-nophon.tei  eng-swa.tei
eng-swe/: Makefile  eng-swe.tei  eng-swe.tei.header
eng-swh/: Makefile  README  eng-swh.tei  freedict-dictionary.css
eng-tur/: ChangeLog  Makefile  README  eng-tur.tei.header  eng-tur2tei.pl  ingtur-tur.utf8
eng-wel/: Makefile  README  eng-wel.tei
fra-bre/: ChangeLog  French_Breton.dict  French_Breton.index  Makefile  README  tei.css  teientry2txt.xsl
fra-deu/: COPYING  ChangeLog  Makefile  fra-deu.tei  fra-deu.tei.header
fra-eng/: AUTHORS  ChangeLog  Makefile  fra-eng.tei  fra-eng.tei.header  freedict-P5.dtd  freedict-P5.rng  freedict-P5.xml
fra-nld/: ChangeLog  Makefile  fra-nld.tei  fra-nld.tei.header
freedict-editor/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  freedict-editor.glade  freedict-editor.gladep  omf.make  xmldocs.make
freedict-editor/data/: Makefile.am  Makefile.in  entry-template.xml  freedict.keys  freedict.mime  la1-la2.template.tei
freedict-editor/debian/: changelog  control  copyright  files  freedict-editor.doc-base  freedict-editor.substvars  manpage.xml  menu  rules  watch
freedict-editor/help/: Makefile.in
freedict-editor/help/C/: Makefile.am  Makefile.in  customise-docbook.xsl  freedict-editor-C.omf  freedict-editor.xml  ipa-table.xml  make-ipatable.pl  make-ipatable.sh  view.sh
freedict-editor/pixmaps/: Makefile.am
freedict-editor/po/: POTFILES.in  POTFILES.skip  de.gmo  de.po  fr.po  freedict-editor.pot  kha.gmo  kha.po  zh.po
freedict-editor/src/: Makefile.am  Makefile.in  Spell-1.0.5-common.c  Spell-1.0.5-stubs.c  Spell-1.0.5.h  callbacks.c  callbacks.h  entryedit.c  entryedit.h  interface.c  interface.h  main.c  utils.c  utils.h  values.c  values.h  xml.c  xml.h
gla-deu/: Makefile  README  gla-deu.tei
gle-eng/: Makefile  README  gle-eng.tei
gle-pol/: ChangeLog  Makefile  gle-pol.tei  iri-pol.tei
howto/: ChangeLog  Makefile  example-tei.xml  freedicthowto.xml  installing-tei.xml  introduction.xml  requirements.xml  submitting.xml  tools.xml  writing-dictd.xml  writing-tei.xml  writing-texteditor.xml
hrv-eng/: AUTHORS  ChangeLog  Makefile  README
htdocs/: index.php
hun-eng/: .gitignore  ChangeLog  Makefile  Makefile.language  hun-eng.tei.header  szotar-dbf2tei.pl
iri-eng/: ChangeLog  Makefile  iri-eng.tei
iri-pol/: AUTHORS
isl-eng/: AUTHORS  Makefile  freedict-P5.rng  isl-eng.tei
ita-deu/: Makefile  ita-deu.tei  ita-deu.tei.header
ita-eng/: ChangeLog  Makefile  Makefile.language  ita-eng.tei  ita-eng.tei.header
jpn-deu/: ChangeLog  Makefile  README  jpn-deu.tei  jpn-deu.tei.header
jpn-eng/: ChangeLog  Makefile  README
jpn-fra/: COPYING  ChangeLog  Makefile  README
jpn-rus/: ChangeLog  Makefile  README
kha-deu/: AUTHORS  ChangeLog  Makefile  Makefile.language  kha-deu.tei  project
tools/: Dict.pm  (+46 more)
(+415 files in other folders)
