dnl Process this file with autoconf to produce a configure script.

AC_INIT(FreeDict Editor, 0.2, [freedict-beta@lists.sourceforge.net])
AM_INIT_AUTOMAKE([dist-bzip2 no-dist-gzip])
AC_REVISION($Revision: 1.6 $)

AM_MAINTAINER_MODE
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

pkg_modules="libgnomeui-2.0 libxml-2.0 libgtkhtml-2.0 libxslt libbonoboui-2.0 gconf-2.0 libglade-2.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

AC_CHECK_LIB(aspell,new_aspell_config,,[AC_MSG_WARN([Some version of aspell, preferably >=0.50.3 is recommended])])

AC_PROG_INTLTOOL([0.23])

GETTEXT_PACKAGE=freedict-editor
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [A parameter for bindtextdomain () & co])
ALL_LINGUAS="kha de zh"
AM_GLIB_GNU_GETTEXT

# hints from autoscan
AC_CHECK_FUNCS([gettimeofday])
AC_CHECK_FUNCS([memset])
AC_CHECK_FUNCS([strchr])
AC_CHECK_FUNCS([strstr])
AC_CHECK_FUNCS([memmove])

AC_C_CONST
AC_HEADER_TIME
AC_STRUCT_TM
AC_C_INLINE

AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
data/Makefile
help/Makefile                                                                                                      
help/C/Makefile
])
