dnl Process this file with autoconf to produce a configure script.

AC_INIT([FreeDict Editor],[0.2],[freedict-beta@lists.sourceforge.net])
AM_INIT_AUTOMAKE([-Wall dist-bzip2 no-dist-gzip])
AC_REVISION($Revision: 1.7 $)

AM_MAINTAINER_MODE
AC_CONFIG_HEADERS(config.h)

AC_ISC_POSIX
AC_PROG_CC
AC_HEADER_STDC

pkg_modules="libgnomeui-2.0 libxml-2.0 libgtkhtml-2.0 libxslt libbonoboui-2.0 gconf-2.0 libglade-2.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

AC_CHECK_LIB(aspell,new_aspell_config,,[AC_MSG_WARN([Some version of aspell, preferably >=0.50.3 is recommended])])

IT_PROG_INTLTOOL([0.23])

GETTEXT_PACKAGE=freedict-editor
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [A parameter for bindtextdomain () & co])
ALL_LINGUAS="kha de zh"
AM_GLIB_GNU_GETTEXT

AC_CHECK_FUNCS([gettimeofday])
AC_CHECK_FUNCS([memset])
AC_CHECK_FUNCS([strchr])
AC_CHECK_FUNCS([strstr])
AC_CHECK_FUNCS([memmove])
AC_CHECK_HEADERS([sys/time.h])

AC_C_CONST
AC_HEADER_TIME
AC_STRUCT_TM
AC_C_INLINE

AC_CONFIG_FILES([
Makefile
src/Makefile
po/Makefile.in
data/Makefile
help/Makefile
help/C/Makefile
])
AC_OUTPUT
